[gd_scene load_steps=2 format=3 uid="uid://d33carvc0ulrr"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/instruction_edit_container.gd" id="1_05xxm"]

[node name="InstructionEditContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05xxm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Search:"

[node name="SearchFilter" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearSearchButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear Search"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Add"

[node name="SaveCloseButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Save & Close"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2

[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer/SearchFilter" to="." method="_on_search_filter_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ClearSearchButton" to="." method="_on_clear_search_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/SaveCloseButton" to="." method="_on_save_close_button_pressed"]
